--- a/styles/style.css
+++ b/styles/style.css
@@ -156,3 +156,19 @@ body.single-entry main {
   width: 100%;
 }
 /* Feature Flag End - Double Column */
+
+#newEntry {
+  background-color: white;
+  border-radius: 6px;
+  list-style-type: none;
+  margin-bottom: 30px;
+  width: 80px;
+  height: 40px;
+  text-align: center;
+  font-size: 16px;
+  vertical-align: middle;
+  line-height: 40px;
+  position: fixed;
+  bottom: 0;
+  right: 20px;
+}
