--- a/styles/style.css
+++ b/styles/style.css
@@ -157,12 +157,12 @@ body.single-entry main {
 }
 /* Feature Flag End - Double Column */
 
-#newEntry {
-  background-color: white;
+#bgUpload {
+  /*background-color: white;*/
   border-radius: 6px;
   list-style-type: none;
   margin-bottom: 30px;
-  width: 80px;
+  width: 120px;
   height: 40px;
   text-align: center;
   font-size: 16px;
